--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 streamlit
-torchaudio==2.2.1
-torch==2.2.1
-git+https://github.com/facebookresearch/audiocraft.git/audiocraft.git
+torchaudio==2.7.0
+torch==2.7.0
+git+https://github.com/facebookresearch/audiocraft.git
